--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                     <path d="M19.5 12H18"></path>
                 </svg>
             </a>
-            <a href="https://www.yoursite.com/buy" class="buy-button" target="_blank">Buy Now</a>
+            <a href="https://pump.fun/profile/9MktqAYuQJJ7kDLRqvV25rT79XLe5pY1pDSwsBmRn6ww" class="buy-button" target="_blank">Buy Now</a>
         </div>
         
     </footer>
